สร้างโดยใช้ Colab

--- a/notion_expense_sync_final.ipynb
+++ b/notion_expense_sync_final.ipynb
@@ -147,6 +147,45 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import datetime\n",
+        "\n",
+        "# ฟังก์ชันนี้ใช้บันทึกข้อความจากผู้ใช้ LINE ลงใน Google Sheet\n",
+        "# โดยจะเก็บเวลา (timestamp), user ID, ข้อความ, และสถานะการ sync\n",
+        "def log_message(user_id, message):\n",
+        "    now = datetime.datetime.now().isoformat()  # เวลาปัจจุบันในรูปแบบ ISO (เช่น 2025-06-17T15:00:00)\n",
+        "    log_sheet.append_row([now, user_id, message, \"NO\"])  # เพิ่มแถวใหม่ลงใน Sheet โดยยังไม่ mark ว่า sync แล้ว"
+      ],
+      "metadata": {
+        "id": "fQzxav055F3i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ฟังก์ชันนี้ใช้ตรวจสอบว่า ข้อความมีรูปแบบ \"[หมวดหมู่] [จำนวนเงิน]\" หรือไม่\n",
+        "# เช่น \"food 150\", \"กาแฟ 65\" → จะ return category และจำนวนเงิน\n",
+        "# ถ้า format ไม่ถูกต้อง จะ return (None, None)\n",
+        "\n",
+        "def is_expense_message(text):\n",
+        "    try:\n",
+        "        parts = text.strip().split()  # ตัดช่องว่างหน้า/หลัง และแยกคำออกเป็น list\n",
+        "        category = parts[0]           # คำแรกคือหมวดหมู่ เช่น \"food\"\n",
+        "        amount = float(parts[1])      # คำที่สองต้องแปลงเป็นจำนวนเงินได้ เช่น 150\n",
+        "        return category, amount\n",
+        "    except:\n",
+        "        return None, None  # ถ้าผิดพลาดใด ๆ (เช่นพิมพ์ผิด) จะคืนค่า None ทั้งคู่"
+      ],
+      "metadata": {
+        "id": "5poXygV55LCz"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
