สร้างโดยใช้ Colab

--- a/notion_expense_sync_final.ipynb
+++ b/notion_expense_sync_final.ipynb
@@ -13,11 +13,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# ติดตั้งไลบรารีสำหรับ Google Sheet, Notion และ env\n",
+        "# ✅ 1. ติดตั้งไลบรารีที่ต้องใช้\n",
         "!pip install gspread oauth2client notion-client python-dotenv"
       ],
       "metadata": {
-        "id": "xHXqsb6gp1P3"
+        "id": "P4xje4lCDXJ5"
       },
       "execution_count": null,
       "outputs": []
@@ -25,23 +25,23 @@
     {
       "cell_type": "code",
       "source": [
+        "# ✅ 2. Mount Google Drive และโหลด .env\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
         "from dotenv import load_dotenv\n",
         "import os\n",
         "\n",
-        "# โหลดค่าจาก .env ที่อยู่ใน Drive\n",
         "env_path = '/content/drive/MyDrive/Automation_Keys/Notion_Expense/.env'\n",
         "load_dotenv(dotenv_path=env_path)\n",
         "\n",
-        "# ดึงค่าตัวแปร\n",
+        "# ✅ โหลดค่าจาก .env\n",
         "NOTION_TOKEN = os.getenv(\"NOTION_TOKEN\")\n",
         "NOTION_DB_ID = os.getenv(\"NOTION_DB_ID\")\n",
         "SHEET_ID = os.getenv(\"SHEET_ID\")"
       ],
       "metadata": {
-        "id": "FNC1M8pWp7ug"
+        "id": "SGQH9TI6DcWx"
       },
       "execution_count": null,
       "outputs": []
@@ -49,31 +49,23 @@
     {
       "cell_type": "code",
       "source": [
-        "# อัปโหลดไฟล์ service_account.json เข้าสู่ Colab memory\n",
-        "from google.colab import files\n",
-        "files.upload()  # เลือกไฟล์จาก Drive หรือ External HDD ก็ได้"
-      ],
-      "metadata": {
-        "id": "_ZdTnKGUtGhf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# ✅ 3. เชื่อม Google Sheets ด้วย service_account.json ที่อยู่ใน Google Drive\n",
         "import gspread\n",
         "from oauth2client.service_account import ServiceAccountCredentials\n",
         "\n",
-        "scope = [\"https://spreadsheets.google.com/feeds\",'https://www.googleapis.com/auth/drive']\n",
-        "creds = ServiceAccountCredentials.from_json_keyfile_name(\"service_account.json\", scope)\n",
+        "scope = [\"https://spreadsheets.google.com/feeds\", \"https://www.googleapis.com/auth/drive\"]\n",
+        "\n",
+        "# ✅ เปลี่ยนชื่อไฟล์ใน Drive เป็น service_account.json แล้ว\n",
+        "service_account_path = \"/content/drive/MyDrive/Automation_Keys/Notion_Expense/service_account.json\"\n",
+        "\n",
+        "creds = ServiceAccountCredentials.from_json_keyfile_name(service_account_path, scope)\n",
         "client = gspread.authorize(creds)\n",
         "\n",
-        "# เปิด Sheet ด้วย SHEET_ID จาก .env (ไม่ต้อง hardcode แล้ว)\n",
+        "# ✅ เปิด Sheet แรกของไฟล์ด้วย SHEET_ID จาก .env\n",
         "sheet = client.open_by_key(SHEET_ID).sheet1"
       ],
       "metadata": {
-        "id": "qM1QlWr4p_37"
+        "id": "Dn0JCgPeDgcK"
       },
       "execution_count": null,
       "outputs": []
@@ -81,17 +73,23 @@
     {
       "cell_type": "code",
       "source": [
+        "# ✅ 4. ฟังก์ชันแปลงข้อความ [หมวดหมู่] [จำนวนเงิน]\n",
         "def parse_message(text):\n",
         "    try:\n",
         "        parts = text.strip().split()\n",
-        "        category = parts[0]\n",
-        "        amount = float(parts[1])\n",
-        "        return category, amount\n",
+        "        if len(parts) == 2:\n",
+        "            category = parts[0]\n",
+        "            amount = float(parts[1])\n",
+        "            return category, amount\n",
+        "        elif len(parts) == 1:\n",
+        "            return parts[0], 0.0  # เผื่อพิมพ์หมวดหมู่อย่างเดียว\n",
+        "        else:\n",
+        "            return None, None\n",
         "    except:\n",
         "        return None, None"
       ],
       "metadata": {
-        "id": "G7w74sCkqFFl"
+        "id": "G3RPYZIkDnO6"
       },
       "execution_count": null,
       "outputs": []
@@ -99,6 +97,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# ✅ 5. เชื่อมต่อ Notion API\n",
         "from notion_client import Client\n",
         "\n",
         "notion = Client(auth=NOTION_TOKEN)\n",
@@ -113,7 +112,7 @@
         "    )"
       ],
       "metadata": {
-        "id": "vYPcnoZvqH6a"
+        "id": "tbU4Ewk7DogY"
       },
       "execution_count": null,
       "outputs": []
@@ -121,6 +120,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# ✅ 6. ฟังก์ชัน Sync Google Sheet → Notion\n",
         "def sync_sheet_to_notion():\n",
         "    data = sheet.get_all_records()\n",
         "    for idx, row in enumerate(data):\n",
@@ -128,8 +128,8 @@
         "            continue\n",
         "\n",
         "        category, amount = parse_message(row['Message'])\n",
-        "        if not category or not amount:\n",
-        "            print(f\"❌ Format ผิดที่ row {idx+2}\")\n",
+        "        if not category or amount is None:\n",
+        "            print(f\"❌ Format ผิดที่ row {idx+2}: {row['Message']}\")\n",
         "            continue\n",
         "\n",
         "        try:\n",
@@ -137,13 +137,10 @@
         "            sheet.update_cell(idx+2, 4, \"YES\")\n",
         "            print(f\"✅ Synced row {idx+2}: {category} {amount}\")\n",
         "        except Exception as e:\n",
-        "            print(f\"🚨 Error at row {idx+2}: {e}\")\n",
-        "\n",
-        "# เรียกฟังก์ชัน\n",
-        "sync_sheet_to_notion()"
+        "            print(f\"🚨 Error at row {idx+2}: {e}\")"
       ],
       "metadata": {
-        "id": "9mYfN6X4qNLP"
+        "id": "_cDN-nZ5Dr4F"
       },
       "execution_count": null,
       "outputs": []
@@ -151,38 +148,15 @@
     {
       "cell_type": "code",
       "source": [
+        "# ✅ 7. บันทึกข้อความจาก Line ลง Google Sheet\n",
         "import datetime\n",
         "\n",
-        "# ฟังก์ชันนี้ใช้บันทึกข้อความจากผู้ใช้ LINE ลงใน Google Sheet\n",
-        "# โดยจะเก็บเวลา (timestamp), user ID, ข้อความ, และสถานะการ sync\n",
         "def log_message(user_id, message):\n",
-        "    now = datetime.datetime.now().isoformat()  # เวลาปัจจุบันในรูปแบบ ISO (เช่น 2025-06-17T15:00:00)\n",
-        "    log_sheet.append_row([now, user_id, message, \"NO\"])  # เพิ่มแถวใหม่ลงใน Sheet โดยยังไม่ mark ว่า sync แล้ว"
+        "    now = datetime.datetime.now().isoformat()\n",
+        "    sheet.append_row([now, user_id, message, \"NO\"])  # เพิ่มแถวใหม่ลง Google Sheet"
       ],
       "metadata": {
-        "id": "fQzxav055F3i"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# ฟังก์ชันนี้ใช้ตรวจสอบว่า ข้อความมีรูปแบบ \"[หมวดหมู่] [จำนวนเงิน]\" หรือไม่\n",
-        "# เช่น \"food 150\", \"กาแฟ 65\" → จะ return category และจำนวนเงิน\n",
-        "# ถ้า format ไม่ถูกต้อง จะ return (None, None)\n",
-        "\n",
-        "def is_expense_message(text):\n",
-        "    try:\n",
-        "        parts = text.strip().split()  # ตัดช่องว่างหน้า/หลัง และแยกคำออกเป็น list\n",
-        "        category = parts[0]           # คำแรกคือหมวดหมู่ เช่น \"food\"\n",
-        "        amount = float(parts[1])      # คำที่สองต้องแปลงเป็นจำนวนเงินได้ เช่น 150\n",
-        "        return category, amount\n",
-        "    except:\n",
-        "        return None, None  # ถ้าผิดพลาดใด ๆ (เช่นพิมพ์ผิด) จะคืนค่า None ทั้งคู่"
-      ],
-      "metadata": {
-        "id": "5poXygV55LCz"
+        "id": "pvsmCqQaDv6S"
       },
       "execution_count": null,
       "outputs": []
