สร้างโดยใช้ Colab

--- a/notion_expense_sync_final.ipynb
+++ b/notion_expense_sync_final.ipynb
@@ -112,10 +112,10 @@
       ],
       "metadata": {
         "id": "Dn0JCgPeDgcK",
-        "outputId": "33626753-4fcb-4534-ec9b-5c39f5bfbfbb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "33626753-4fcb-4534-ec9b-5c39f5bfbfbb"
       },
       "execution_count": 70,
       "outputs": [
@@ -331,7 +331,7 @@
       "metadata": {
         "id": "-vzENZK4j1Ml"
       },
-      "execution_count": 75,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -384,11 +384,11 @@
         "sync_sheet_to_notion_dynamic()"
       ],
       "metadata": {
-        "id": "bQ1mGptSluiS",
-        "outputId": "fc60e879-3bce-412e-dd07-3558e57a4b7a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "bQ1mGptSluiS",
+        "outputId": "fc60e879-3bce-412e-dd07-3558e57a4b7a"
       },
       "execution_count": 77,
       "outputs": [
@@ -410,6 +410,130 @@
             "📥 Logged unknown: 'ลำโพงบลูทูธ 899'\n",
             "⚠️ ไม่สามารถส่ง 'แชมพู 99' ไปยัง Notion ได้ (หมวดไม่รู้จัก)\n",
             "📥 Logged unknown: 'แชมพู 99'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "log_message(\"U003\", \"บะหมี่หมูแดง 120\")  # ไม่มีใน keyword"
+      ],
+      "metadata": {
+        "id": "WFjx16Ppp7Y3",
+        "outputId": "c3958309-2eb6-498d-b4d3-86c214fb4858",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "✅ Logged: [2025-06-19T10:06:47.826558] U003 → บะหมี่หมูแดง 120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def log_and_sync_message(user_id, message):\n",
+        "    now = datetime.datetime.now().isoformat()\n",
+        "    sheet.append_row([now, user_id, message, \"NO\"])  # log ลง Google Sheet\n",
+        "\n",
+        "    # แปลงข้อความ เช่น \"บะหมี่หมูแดง 120\"\n",
+        "    parsed_text, amount = parse_message(message)\n",
+        "    if not parsed_text or amount is None:\n",
+        "        return f\"❌ ข้อความไม่ถูกต้อง: '{message}'\"\n",
+        "\n",
+        "    # เดาหมวดจาก keyword\n",
+        "    guessed_category = find_category(parsed_text)\n",
+        "\n",
+        "    if not guessed_category:\n",
+        "        log_unknown_category(message, parsed_text, amount)\n",
+        "        return f\"⚠️ ไม่สามารถบันทึก '{message}' ได้ (ไม่รู้จักหมวด)\"\n",
+        "\n",
+        "    db_id = category_to_db_id.get(guessed_category)\n",
+        "    if not db_id:\n",
+        "        return f\"❌ ไม่พบ Database สำหรับหมวด '{guessed_category}'\"\n",
+        "\n",
+        "    # ส่งเข้า Notion\n",
+        "    try:\n",
+        "        notion.pages.create(\n",
+        "            parent={\"database_id\": db_id},\n",
+        "            properties={\n",
+        "                \"Name\": {\"title\": [{\"text\": {\"content\": message}}]},\n",
+        "                \"Amount\": {\"number\": amount}\n",
+        "            }\n",
+        "        )\n",
+        "\n",
+        "        # ✅ อัปเดตว่า sync แล้วใน Google Sheet\n",
+        "        data = sheet.get_all_records()\n",
+        "        for i, row in enumerate(data):\n",
+        "            if row[\"Message\"] == message and row[\"UserID\"] == user_id:\n",
+        "                sheet.update_cell(i + 2, 4, \"YES\")  # คอลัมน์ D = \"Synced?\"\n",
+        "                break\n",
+        "\n",
+        "        return f\"✅ บันทึกเรียบร้อย: '{message}' → หมวด '{guessed_category}'\"\n",
+        "\n",
+        "    except Exception as e:\n",
+        "        return f\"🚨 เกิดข้อผิดพลาดขณะส่งเข้า Notion: {e}\"\n"
+      ],
+      "metadata": {
+        "id": "ZeN7Qyk8r9G7"
+      },
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "response = log_and_sync_message(\"U003\", \"บะหมี่หมูแดง 120\")\n",
+        "print(response)"
+      ],
+      "metadata": {
+        "id": "GLB1SZEtsA5Y",
+        "outputId": "838184b3-7197-4c95-9ae4-6eb6414bd80c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "📥 Logged unknown: 'บะหมี่หมูแดง 120'\n",
+            "⚠️ ไม่สามารถบันทึก 'บะหมี่หมูแดง 120' ได้ (ไม่รู้จักหมวด)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "response = log_and_sync_message(\"U003\", \"ลำโพง 890\")\n",
+        "print(response)"
+      ],
+      "metadata": {
+        "id": "R0chii4WsFtA",
+        "outputId": "229912be-e18f-4da5-c554-a158ef1b7e52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "📥 Logged unknown: 'ลำโพง 890'\n",
+            "⚠️ ไม่สามารถบันทึก 'ลำโพง 890' ได้ (ไม่รู้จักหมวด)\n"
           ]
         }
       ]
